--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>dvp-todo-app</title>
+    <title>todo-app-bonbonpa</title>
   </head>
   <body>
     <div id="app"></div>
